5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1749_3087.log
== TEST (2019-05-15 18:26:36) 
-- CODE:
x=int(input('digite numeros inteiros:'))
pares=2,4,6,8
while (x !=0):
	x=int(input('digite um numero:'))
	
-- OUTPUT:
19
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:28:19) 
-- CODE:
x=int(input('digite numeros inteiros:'))

soma= x!0

while (x !=0):
	x=int(input('digite um numero:'))
	
-- ERROR:
File "XXXX", line 3
    soma= x!0
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:28:25) 
-- CODE:
x=int(input('digite numeros inteiros:'))

soma= x!=0

while (x !=0):
	x=int(input('digite um numero:'))
	
-- ERROR:
File "XXXX", line 3
    soma= x!0
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:30:24) 
-- CODE:
x=int(input('digite numeros inteiros:'))

soma != impar

while (x !=0):
	x=int(input('digite um numero:'))
	print()
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    soma != impar
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:30:48) 
-- CODE:
x=int(input('digite numeros inteiros:'))

x != impar

while (x !=0):
	x=int(input('digite um numero:'))
	print()
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x != impar
NameError: name 'impar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:12) 
-- CODE:
x=int(input('digite numeros inteiros:'))

x != 'impar'

while (x !=0):
	x=int(input('digite um numero:'))
	print()
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x != impar
NameError: name 'impar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:33:11) 
-- CODE:
x=int(input('digite numeros inteiros:'))
soma= 'ira somar ate ser colado o numero 0'
while (x !=0):
	x=int(input('digite um numero:'))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x != impar
NameError: name 'impar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:33:21) 
-- CODE:
x=int(input('digite numeros inteiros:'))
soma= 'ira somar ate ser colado o numero 0'
while (x !=0):
	x=int(input('digite um numero:'))
	
-- EXECUTION TIME:
0.15685
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:

-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:

-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:45:13) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=o
impar=0
while(n!=0):
	if int(n)%2==0
		par=par+n
		c=c+1
		soma=par
	else int(n)%2!=0
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma)
-- ERROR:
File "XXXX", line 7
    if int(n)%2==0
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:46:13) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=o
impar=0
while(n!=0):
	if int(n)%2==0
		par=par+n
		c=c+1
		soma=par
	else int(n)%2!=0
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma)
-- ERROR:
File "XXXX", line 7
    if int(n)%2==0
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:46:20) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=o
impar=0
	while(n!=0):
	if int(n)%2==0
		par=par+n
		c=c+1
		soma=par
	else int(n)%2!=0
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma)
-- ERROR:
File "XXXX", line 6
    while(n!=0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:46:30) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=o
impar=0
while(n!=0):
	if int(n)%2==0
		par=par+n
		c=c+1
		soma=par
	else int(n)%2!=0
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma)
-- ERROR:
File "XXXX", line 7
    if int(n)%2==0
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:46:53) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=o
impar=0
while(n!=0):
	if int(n)%2==0
		par=par+n
		c=c+1
		soma=par
	else int(n)%2!=0
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma(round(x, 2)))
-- ERROR:
File "XXXX", line 7
    if int(n)%2==0
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:47:14) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=o
impar=0
while(n!=0):
	if (int(n)%2==0):
		par=par+n
		c=c+1
		soma=par
	else (int(n)%2!=0):
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma(round(x, 2)))
-- ERROR:
File "XXXX", line 11
    else (int(n)%2!=0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:47:23) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=o
impar=0
while(n!=0):
	if (int(n)%2==0):
		par=par+n
		c=c+1
		soma=par
	else:
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma(round(x, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    par=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:47:35) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=0
impar=0
while(n!=0):
	if (int(n)%2==0):
		par=par+n
		c=c+1
		soma=par
	else:
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma(round(x, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    par=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:47:52) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=0
impar=0
while(n!=0):
	if (int(n)%2==0):
		par=par+n
		c=c+1
		soma=par
	else:
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma(round(x, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    par=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:48:00) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=0
impar=0
while(n!=0):
	if (int(n)%2==0):
		par=par+n
		c=c+1
		soma=par
	else:
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma(round(x, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    par=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:48:37) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=0
impar=0
soma= n+par
while(n!=0):
	if (int(n)%2==0):
		par=par+n
		c=c+1
		soma=par
	else:
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma(round(x, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    par=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:48:45) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=0
impar=0
soma= n+par
while(n!=0):
	if (int(n)%2==0):
		par=par+n
		c=c+1
		soma=par
	else:
		impar=impar+n
		b=b+1
		
n=int(input('n:'))
print(soma(round(x, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    par=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:52:11) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=0
impar=0

while(n!=0):
	if (n%2==0):
		par=par+n
		c=c+1
		soma=par
	elif(n%2 !=0):
		impar=impar+n
		b=b+1
		n=int(input('n:'))
d=par/c
f=impar/b
print(round(d/4))
print(round(f/4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    par=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:52:37) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=0
impar=0

while(n!=0):
	if (n%2==0):
		par=par+n
		c=c+1
		soma=par
	elif(n%2 !=0):
		impar=impar+n
		b=b+1
		n=int(input('n:'))
d=par/c
f=impar/b
print(round(d/4))
print(round(f/4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    par=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:54:55) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=0
impar=0

while(n!=0):
	if (n%2==0):
		par=par+n
		c=c+1
	else:
		impar=impar+n
		b=b+1
		n=int(input('n:'))
d=par/c
f=impar/b
print(round(d/4))
print(round(f/4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    par=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:55:11) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=0
impar=0

while(n!=0):
	if (n%2==0):
		par=par+n
		c=c+1
	else:
		impar=impar+n
		b=b+1
		n=int(input('n:'))
d=par/c
f=impar/b
print(round(d/4))
print(round(f/4))
-- EXECUTION TIME:
16.9713
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:

-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:55:11) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=0
impar=0

while(n!=0):
	if (n%2==0):
		par=par+n
		c=c+1
		soma=par
	elif(n%2 !=0):
		impar=impar+n
		b=b+1
		n=int(input('n:'))
d=par/c
f=impar/b
print(round(d/4))
print(round(f/4))
-- EXECUTION TIME:
168.72
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:

-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:55:11) 
-- CODE:
n=int(input('digite numeros inteiros:'))
c=0
b=0
par=0
impar=0

while(n!=0):
	if (n%2==0):
		par=par+n
		c=c+1
	else:
		impar=impar+n
		b=b+1
		n=int(input('n:'))
d=par/c
f=impar/b
print(round(d/4))
print(round(f/4))
-- EXECUTION TIME:
15.9405
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
digite numeros inteiros:
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:

-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
